--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -59,7 +59,6 @@
 
 }
 
-
 .cardBackgroundHover:hover .hide1 {
 
     color: #9747FF;
@@ -75,15 +74,12 @@
 
     }
 
-
     to {
         opacity: 1;
         display: block;
     }
 
 }
-
-
 
 .cardBackgroundHover .hide1 {
 
@@ -220,4 +216,26 @@
 
 .hidescrollBar::-webkit-scrollbar {
     display: none;
+}
+
+
+
+.mainDiv>.gift {
+
+    background-image: url(/images/home1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all ease-in-out 500ms;
+    width: 170px;
+    height: 150px;
+}
+
+.mainDiv:hover>.gift {
+
+    background-image: url(/images/home3.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all ease-in-out 500ms;
+    width: 170px;
+    height: 150px;
 }
