--- a/components/IwannaTech/IwanntTech.module.css
+++ b/components/IwannaTech/IwanntTech.module.css
@@ -29,10 +29,6 @@
     animation: mover 2s infinite alternate;
 }
 
-.vertmove {
-    /* -webkit-animation: mover 2s infinite alternate; */
-    animation: mover 2s infinite alternate;
-}
 
 @-webkit-keyframes mover {
     0% {
@@ -54,6 +50,39 @@
     }
 }
 
+
+/* animation for mobile  */
+
+
+@media screen and (max-width:767px) {
+
+
+    .vertmove {
+        /* -webkit-animation: mover 2s infinite alternate; */
+        animation: mover 1s infinite alternate;
+    }
+
+
+    @-webkit-keyframes mover {
+        0% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(-10px);
+        }
+    }
+
+    @keyframes mover {
+        0% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(-10px);
+        }
+    }
+}
 
 /* i whytechTech  */
 
