--- a/components/Start/Start.module.css
+++ b/components/Start/Start.module.css
@@ -58,3 +58,15 @@
         font-weight: 800;
     }
 }
+
+
+.formbg {
+
+    background: rgba(151, 71, 255, 0.2);
+}
+
+.paymentbyGiftCardBtn {
+
+    background: linear-gradient(180deg, #AC6CFF 0%, #6400E6 100%);
+    border-radius: 104px;
+}
