--- a/components/Start/Start.module.css
+++ b/components/Start/Start.module.css
@@ -70,3 +70,16 @@
     background: linear-gradient(180deg, #AC6CFF 0%, #6400E6 100%);
     border-radius: 104px;
 }
+
+
+
+.shadowForPaymentOption {
+
+    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.45);
+}
+
+
+.btnDesabledBg {
+
+    background: linear-gradient(180deg, #AC6CFF 0%, #6400E6 100%);
+}
