--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -259,3 +259,42 @@
 
     background: linear-gradient(180deg, #AC6BFF 0%, #7721E8 100%);
 }
+
+
+/* toggle animation */
+
+
+.toggleOn {
+    animation: toggleOn ease-in-out 500ms forwards;
+    transition: all ease-in-out 500ms;
+}
+
+@keyframes toggleOn {
+
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(180deg);
+    }
+
+}
+
+
+.toggleOff {
+    animation: toggleOff ease-in-out 500ms forwards;
+    transition: all ease-in-out 500ms;
+}
+
+@keyframes toggleOff {
+
+    from {
+        transform: rotate(180deg);
+    }
+
+    to {
+        transform: rotate(0deg);
+    }
+
+}
