--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -595,3 +595,29 @@ screen and (max-height: 700px) {
 
     }
 }
+
+.vertmove {
+    /* -webkit-animation: mover 2s infinite alternate; */
+    animation: mover 2s infinite alternate;
+}
+
+
+@-webkit-keyframes mover {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-40px);
+    }
+}
+
+@keyframes mover {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-40px);
+    }
+}
