--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -601,14 +601,13 @@ screen and (max-height: 700px) {
     animation: mover 2s infinite alternate;
 }
 
-
 @-webkit-keyframes mover {
     0% {
         transform: translateY(0);
     }
 
     100% {
-        transform: translateY(-40px);
+        transform: translateY(-10px);
     }
 }
 
@@ -618,6 +617,35 @@ screen and (max-height: 700px) {
     }
 
     100% {
-        transform: translateY(-40px);
+        transform: translateY(-10px);
+    }
+}
+
+
+.vertmoveDown {
+    /* -webkit-animation: mover 2s infinite alternate; */
+    animation: moverDown 2s infinite alternate;
+
+
+}
+
+@-webkit-keyframes moverDown {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-10px);
+
+    }
+}
+
+@keyframes moverDown {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-10px);
     }
 }
