working on i wanna tech

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -507,3 +507,11 @@ select:focus {
 
 
 /* @media only screen and(min ) */
+
+.firstPosition {
+  top: 0px !important;
+}
+
+.secondPosition {
+  top: 40px !important;
+}
