--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -510,12 +510,17 @@ select:focus {
 
 /* cutom font size for max screen size 2560 or default size of all types fonts */
 @media only screen and (min-width:1921px) {
+
+  .extxlsmallf {
+    font-size: 30px;
+  }
+
   .extsmallf {
     font-size: 13px;
   }
 
   .minismallf {
-    font-size: 20px;
+    font-size: 25px;
   }
 
   .smallf {
@@ -523,11 +528,11 @@ select:focus {
   }
 
   .mediumf {
-    font-size: 20px;
+    font-size: 30px;
   }
 
   .largef {
-    font-size: 24px;
+    font-size: 35px;
   }
 
   .extlargef {
@@ -539,7 +544,7 @@ select:focus {
   }
 
   .triplelargef {
-    font-size: 45px;
+    font-size: 50px;
   }
 
   .fourxllargef {
