--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -443,11 +443,14 @@ select:focus {
   }
 
   .dubblelargef {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .triplelargef {
-    font-size: 35px;
+    font-size: 25px;
+    letter-spacing: 1px;
+    font-weight: 800;
+    line-height: 44px;
   }
 
   .fourxllargef {
@@ -462,8 +465,8 @@ select:focus {
 
 
 
-/* cutom font size for max screen size 1400 or default size of all types fonts */
-@media only screen and (min-width:1400px) {
+/* cutom font size for max screen size 1601 or default size of all types fonts */
+@media only screen and (min-width:1601px) {
   .extsmallf {
     font-size: 13px;
   }
@@ -493,7 +496,10 @@ select:focus {
   }
 
   .triplelargef {
-    font-size: 30px;
+    font-size: 35px;
+    letter-spacing: -0.02em;
+    font-weight: 500;
+    line-height: 44px;
   }
 
   .fourxllargef {
@@ -545,6 +551,7 @@ select:focus {
 
   .triplelargef {
     font-size: 50px;
+
   }
 
   .fourxllargef {
@@ -669,4 +676,14 @@ select:focus {
 .lastPosition {
   transform: translateY(396.0px);
   transition: ease 500ms;
+}
+
+
+
+@media screen and (max-width:1300px) {
+
+  .ncbtmbtop {
+    margin-top: -10px;
+  }
+
 }
